--- a/index.html
+++ b/index.html
@@ -5,41 +5,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Include Tailwind CSS from JSdelivr CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <title>August's Dev Site</title>
+    <title>August's Futuristic Website</title>
 </head>
-<body class="bg-gray-100 font-sans">
+<body class="bg-black text-white font-sans">
 
-    <header class="bg-gray-800 text-white p-4">
-        <h1 class="text-3xl">August's Dev Site</h1>
-        <p>Welcome to the world of development!</p>
+    <header class="text-center py-16">
+        <h1 class="text-5xl font-bold">Futuristic Website</h1>
+        <p class="mt-4">Exploring the future of technology and innovation.</p>
     </header>
 
-    <section class="main-content p-8">
-        <h2 class="text-2xl">About Us</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+    <section class="container mx-auto text-center">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+            <div class="p-8 border border-gray-800 rounded-lg mb-8">
+                <h2 class="text-2xl font-semibold mb-4">Virtual Reality</h2>
+                <img src="VisionPro.jpg" alt="Virtual Reality" class="mb-4 rounded-lg">
+                <p class="text-gray-400">Immerse yourself in a world of virtual reality and experience the future of entertainment.</p>
+            </div>
+            <div class="p-8 border border-gray-800 rounded-lg mb-8">
+                <h2 class="text-2xl font-semibold mb-4">Artificial Intelligence</h2>
+                <img src="ChatGPT_logo.svg.png" alt="Artificial Intelligence" class="mb-4 rounded-lg">
+                <p class="text-gray-400">Explore the possibilities of artificial intelligence and how it's shaping our daily lives.</p>
+            </div>
+            <div class="p-8 border border-gray-800 rounded-lg mb-8">
+                <h2 class="text-2xl font-semibold mb-4">Space Exploration</h2>
+                <p class="text-gray-400">Embark on a journey to the cosmos and discover the latest in space exploration technology.</p>
+            </div>
+        </div>
     </section>
 
-    <section class="features p-8">
-        <h2 class="text-2xl">Key Features</h2>
-        <ul class="list-disc list-inside">
-            <li>Feature 1</li>
-            <li>Feature 2</li>
-            <li>Feature 3</li>
-        </ul>
-    </section>
-
-    <section class="cta p-8">
-        <h2 class="text-2xl">Get Started</h2>
-        <p>Join us in creating amazing things. Let's build the future together!</p>
-        <a href="#" class="btn bg-gray-800 text-white py-2 px-4 rounded-full">Sign Up</a>
-    </section>
-
-    <footer class="bg-gray-800 text-white text-center p-4 fixed bottom-0 w-full">
-        <p>&copy; 2024 August Bowles. All rights reserved.</p>
+    <footer class="bg-gray-800 text-center py-8">
+        <p class="text-gray-400">&copy; 2024 Futuristic Website. All rights reserved.</p>
     </footer>
 
-    <!-- Optional: Include Tailwind CSS for development with JIT (Just-In-Time) compiler -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.js"></script> -->
 </body>
 </html>
