--- a/index.html
+++ b/index.html
@@ -10,31 +10,32 @@
 <body class="bg-black text-white font-sans">
 
     <header class="text-center py-16">
-        <h1 class="text-5xl font-bold">Futuristic Website</h1>
-        <p class="mt-4">Exploring the future of technology and innovation.</p>
+        <h1 class="text-5xl font-bold">Invest in the Future</h1>
+        <p class="mt-4">The Future of Technology and Innovation is in your hands</p>
     </header>
 
     <section class="container mx-auto text-center">
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
             <div class="p-8 border border-gray-800 rounded-lg mb-8">
-                <h2 class="text-2xl font-semibold mb-4">Virtual Reality</h2>
+                <h2 class="text-2xl font-semibold mb-4">Mixed Reality</h2>
                 <img src="VisionPro.jpg" alt="Virtual Reality" class="mb-4 rounded-lg">
-                <p class="text-gray-400">Immerse yourself in a world of virtual reality and experience the future of entertainment.</p>
+                <p class="text-gray-400">This new sector of technology is revolutionizing etertainment, work, and education.</p>
             </div>
             <div class="p-8 border border-gray-800 rounded-lg mb-8">
                 <h2 class="text-2xl font-semibold mb-4">Artificial Intelligence</h2>
-                <img src="ChatGPT_logo.svg.png" alt="Artificial Intelligence" class="mb-4 rounded-lg">
-                <p class="text-gray-400">Explore the possibilities of artificial intelligence and how it's shaping our daily lives.</p>
+                <img src="Chatgpt-Icon.png" alt="Artificial Intelligence" class="mb-4 rounded-lg">
+                <p class="text-gray-400">The future of our planet is in ai technology. Now is the time to learn and capatalize on the development of this new tool. </p>
             </div>
             <div class="p-8 border border-gray-800 rounded-lg mb-8">
-                <h2 class="text-2xl font-semibold mb-4">Space Exploration</h2>
-                <p class="text-gray-400">Embark on a journey to the cosmos and discover the latest in space exploration technology.</p>
+                <h2 class="text-2xl font-semibold mb-4">The Future is Up to you</h2>
+              <img src="code.png" alt="Code">
+                <p class="text-gray-400">Software and web development is the future. Right now you can create a spark that will change generations.</p>
             </div>
         </div>
     </section>
 
     <footer class="bg-gray-800 text-center py-8">
-        <p class="text-gray-400">&copy; 2024 Futuristic Website. All rights reserved.</p>
+        <p class="text-gray-400">&copy; 2024 August Bowles. All rights reserved.</p>
     </footer>
 
 </body>
